pegando dados do web service

--- a/chart/index.html
+++ b/chart/index.html
@@ -799,9 +799,9 @@
             <!-- Widgets -->
             <div class="row clearfix">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-pink hover-expand-effect">
+                    <div class="info-box bg-indigo hover-expand-effect">
                         <div class="icon">
-                            <i class="material-icons">playlist_add_check</i>
+                            <i class="material-icons">show_chart</i>
                         </div>
                         <div class="content">
                             <div class="text">Demandas</div>
@@ -810,7 +810,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-pink hover-expand-effect">
+                    <div class="info-box bg-blue hover-expand-effect">
                         <div class="icon">
                             <i class="material-icons">playlist_add_check</i>
                         </div>
@@ -821,7 +821,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-pink hover-expand-effect">
+                    <div class="info-box bg-red hover-expand-effect">
                         <div class="icon">
                             <i class="material-icons">cancel</i>
                         </div>
@@ -844,17 +844,17 @@
                         </div>                  
                         <div class="content">
                             <div class="text">#{{order.order}} - Mesa{{order.desk_number}}</div>
-                            <div class="number">{{order.start}} </div>
+                            <div class="number">--- </div>
                         </div>
                     </div>
 
-                    <div class="info-box bg-pink hover-expand-effect" ng-if="order.status == 'idle'">
+                    <div class="info-box bg-red hover-expand-effect" ng-if="order.status == 'idle'">
                         <div class="icon">
                             <i class="material-icons">cancel</i>
                         </div>                    
                         <div class="content">
-                            <div class="text">#{{order.order}} - Mesa{{order.pk}}</div>
-                            <div class="number">{{order.start}} </div>
+                            <div class="text">#{{order.order}} - Mesa{{order.desk_number}}</div>
+                            <div class="number">--- </div>
                         </div>
                     </div>
                 </div>
@@ -969,7 +969,6 @@
     <script src="js/demo.js"></script>
 
     <script src="js/angular.js"></script>
-    <script src="js/angular-moment.min.js"></script>
     <script src="js/ctrl.js"></script>
 
 </body>
