--- a/chart/resultados.html
+++ b/chart/resultados.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>SMARTWORK</title>
+    <title>ChartJS | Bootstrap Based Admin Template - Material Design</title>
     <!-- Favicon-->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -24,9 +23,6 @@
 
     <!-- Preloader Css -->
     <link href="plugins/material-design-preloader/md-preloader.css" rel="stylesheet" />
-
-    <!-- Morris Chart Css-->
-    <link href="plugins/morrisjs/morris.css" rel="stylesheet" />
 
     <!-- Custom Css -->
     <link href="css/style.css" rel="stylesheet">
@@ -68,7 +64,7 @@
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="index.html">SMARTWORK</a>
+                <a class="navbar-brand" href="index.html">ADMINBSB - MATERIAL DESIGN</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -298,7 +294,7 @@
             <div class="menu">
                 <ul class="list">
                     <li class="header">MAIN NAVIGATION</li>
-                    <li class="active">
+                    <li>
                         <a href="index.html">
                             <i class="material-icons">home</i>
                             <span>Home</span>
@@ -497,7 +493,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons">pie_chart</i>
                             <span>Charts</span>
@@ -509,7 +505,7 @@
                             <li>
                                 <a href="pages/charts/flot.html">Flot</a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="pages/charts/chartjs.html">ChartJS</a>
                             </li>
                             <li>
@@ -606,7 +602,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="pages/changelogs.html">
+                        <a href="../changelogs.html">
                             <i class="material-icons">update</i>
                             <span>Changelogs</span>
                         </a>
@@ -790,146 +786,27 @@
         <!-- #END# Right Sidebar -->
     </section>
 
-    <section class="content" >
-        <div class="container-fluid" ng-controller="CtrlIndex">
+    <section class="content">
+        <div class="container-fluid" ng-controller="CtrlResultados">
             <div class="block-header">
-                <h2>DASHBOARD</h2>
+                <h2>
+                    Relatório dos resultados alcançados
+                </h2>
             </div>
-
-            <!-- Widgets -->
             <div class="row clearfix">
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-indigo hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">show_chart</i>
+                <!-- Line Chart -->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="card">
+                        <div class="header">
+                            <h2>Resultados esperando x alcançados</h2>
                         </div>
-                        <div class="content">
-                            <div class="text">Demandas</div>
-                            <div class="number">{{retorno.order_count}}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-blue hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">playlist_add_check</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">Total de mesas</div>
-                            <div class="number ">{{retorno.started_desk + retorno.idle_desk}}</div>
+                        <div class="body">
+                            <canvas id="line_chart" height="150"></canvas>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-red hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">cancel</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">Mesas Inativas </div>
-                            <div class="number ">{{retorno.idle_desk}}</div>
-                        </div>
-                    </div>
-                </div>
+                <!-- #END# Line Chart -->
             </div>
-            <!-- #END# Widgets -->
-
-            <!-- TESTE -->
-            <div class="row clearfix">
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="order in orders">
-
-                    <div class="info-box bg-light-green  hover-expand-effect" ng-if="order.status == 'working'">
-                        <div class="icon">
-                            <i class="material-icons">work</i>
-                        </div>                  
-                        <div class="content">
-                            <div class="text">#{{order.order}} - Mesa{{order.desk_number}} </div>
-                            <div class="number"> {{order.start | date:'HH:mm:ss'}} </div>
-                        </div>
-                    </div>
-
-                    <div class="info-box bg-red hover-expand-effect" ng-if="order.status == 'idle'">
-                        <div class="icon">
-                            <i class="material-icons">cancel</i>
-                        </div>                    
-                        <div class="content">
-                            <div class="text">#{{order.order}} - Mesa{{order.desk_number}}</div>
-                            <div class="number"> {{order.finish | date:'HH:mm:ss'}} </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 
-            <div class="row clearfix">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="info-box bg-pink hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">cancel</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">#01 - Mesa 1</div>
-                            <div>Tempo Inativo: 00:05s</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="info-box bg-pink hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">cancel</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">#02 - Mesa 2</div>
-                            <div>Tempo Inativo: 00:58s</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="info-box bg-light-green hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">work</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">#02 - Mesa 3</div>
-                            <div>Tempo Ativo: 00:30s</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="info-box bg-light-green hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">work</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">#02 - Mesa 4</div>
-                            <div>Tempo Ativo: 00:30s</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="info-box bg-light-green hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">work</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">#02 - Mesa 5</div>
-                            <div>Tempo Ativo: 00:30s</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="info-box bg-light-green hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">work</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">#02 - Mesa 6</div>
-                            <div>Tempo Ativo: 00:30s</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            -->
         </div>
     </section>
 
@@ -948,28 +825,16 @@
     <!-- Waves Effect Plugin Js -->
     <script src="plugins/node-waves/waves.js"></script>
 
-    <!-- Jquery CountTo Plugin Js -->
-    <script src="plugins/jquery-countto/jquery.countTo.js"></script>
-
-    <!-- Morris Plugin Js -->
-    <script src="plugins/raphael/raphael.min.js"></script>
-    <script src="plugins/morrisjs/morris.js"></script>
-
-    <!-- ChartJs -->
+    <!-- Chart Plugins Js -->
     <script src="plugins/chartjs/Chart.bundle.js"></script>
-
-    <!-- Sparkline Chart Plugin Js -->
-    <script src="plugins/jquery-sparkline/jquery.sparkline.js"></script>
 
     <!-- Custom Js -->
     <script src="js/admin.js"></script>
-    <script src="js/pages/index.js"></script>
+    <script src="js/pages/charts/chartjs.js"></script>
 
     <!-- Demo Js -->
     <script src="js/demo.js"></script>
-    <script type="text/javascript" src="js/moments.js"></script>
     <script src="js/angular.js"></script>
-    <script src="js/angular-moment.js"></script>
     <script src="js/ctrl.js"></script>
 </body>
 
