grafico de espectativa

--- a/chart/resultados.html
+++ b/chart/resultados.html
@@ -830,11 +830,12 @@
 
     <!-- Custom Js -->
     <script src="js/admin.js"></script>
-    <script src="js/pages/charts/chartjs.js"></script>
 
     <!-- Demo Js -->
     <script src="js/demo.js"></script>
+     <script type="text/javascript" src="js/moments.js"></script>
     <script src="js/angular.js"></script>
+    <script src="js/angular-moment.js"></script>
     <script src="js/ctrl.js"></script>
 </body>
 
