Alteração na tela de gráficos

--- a/chart/resultados.html
+++ b/chart/resultados.html
@@ -793,6 +793,43 @@
                     Relatório dos resultados alcançados
                 </h2>
             </div>
+            <!-- Widgets -->
+            <div class="row clearfix">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="info-box bg-blue">
+                        <div class="icon">
+                            <i class="material-icons">today</i>
+                        </div>
+                        <div class="content">
+                            <div class="text">Dias restantes</div>
+                            <div class="number">{{diasRestantes}}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="info-box bg-light-green">
+                        <div class="icon">
+                            <i class="material-icons">playlist_add_check</i>
+                        </div>
+                        <div class="content">
+                            <div class="text">Total produzido</div>
+                            <div class="number ">{{totalProduzido}} Peças</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="info-box bg-orange">
+                        <div class="icon">
+                            <i class="material-icons">cancel</i>
+                        </div>
+                        <div class="content">
+                            <div class="text">Peças restantes</div>
+                            <div class="number ">{{restante}} Peças</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- #END# Widgets -->
             <div class="row clearfix">
                 <!-- Line Chart -->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
